# Exp-LINUX

./: CMakeLists.txt
codes/: 2.c  3.c  4.c
exp1/: expsum.sh  lsroot.sh  实验1熟练掌握Shell脚本的编写与调试.doc
exp2/: CopyFile.c  exp2.c  linux编程实验2  Linux系统文件基本操作.doc
exp3/: 1.c  1_1.c  2.c  3_client.c  3_server.c  linux编程实验3 Linux系统进程编程.doc
exp4/: IOT2019  linux编程实验4_Linux网络编程之UDP编程.doc  udpclient.c  udpclient_connect.c  udpserver.c
exp5/: linux编程实验5_ Linux网络编程之TCP编程.doc  tcpclient.c  tcpserver.c
